# ATHENA-X

./: .gitignore  README.md  package-lock.json  package.json
docs/: API_CONTRACTS_AND_SCHEMAS.md  ATHENAX_PRODUCT_VISION_AND_UX.md  ATHENAX_ROADMAP_AND_IMPLEMENTATION.md  ATHENAX_SYSTEM_ARCHITECTURE.md  ATHENA_SPECIFICATION.md  UML_DIAGRAMS.md
infrastructure/kubernetes/helm/athena/: values.yaml
infrastructure/terraform/: main.tf
services/athena-agent-reasoning/: requirements.txt
services/athena-agent-reasoning/app/: main.py
services/athena-digital-twin/: go.mod
services/athena-digital-twin/cmd/: main.go
services/athena-graph-sync/: requirements.txt
services/athena-graph-sync/app/: main.py
services/athena-ingestion-gateway/: Cargo.toml
services/athena-ingestion-gateway/src/: main.rs
services/athena-remediation-operator/: go.mod
services/athena-remediation-operator/cmd/: main.go
services/athena-x-portal/: package-lock.json  package.json  project_dump.txt
services/athena-x-portal/src/app/: globals.css  layout.tsx  page.tsx
services/athena-x-portal/src/app/incidents/: page.tsx
services/athena-x-portal/src/app/knowledge/: page.tsx
services/athena-x-portal/src/app/predictive/: page.tsx
services/athena-x-portal/src/app/reasoning/: page.tsx
services/athena-x-portal/src/app/twin/: page.tsx
